--- a/slots/templates/slots/home.html
+++ b/slots/templates/slots/home.html
@@ -28,25 +28,30 @@
             width: 100%;
             z-index: 1;
         }
-
         .legend {
-            position: absolute;
-            bottom: 30px;
-            left: 10px;
             background: white;
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             font-size: 14px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.3);
+            line-height: 1.5;
+        }
+        .legend h4 {
+            margin: 0 0 10px;
+            font-weight: bold;
+            text-align: center;
+        }
+        .legend-item {
+            display: flex;
+            align-items: center;
+            gap: 8px; /* Space between icon and text */
+            margin-bottom: 5px;
+        }
+        .legend-item img {
+            width: 20px; /* Adjust size of the icons */
+            height: 30px;
         }
 
-        .legend i {
-            width: 20px;
-            height: 20px;
-            float: left;
-            margin-right: 8px;
-            opacity: 0.8;
-        }
 
         @media (max-width: 768px) {
             h1 {
@@ -64,7 +69,6 @@
 <body>
     <h1>Available Parking Spots</h1>
     <div id="map"></div>
-    <div class="legend" id="legend"></div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.js"></script>
@@ -84,21 +88,27 @@
         const icons = {
             available: L.icon({
                 iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+                shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
                 iconSize: [25, 41],
                 iconAnchor: [12, 41],
-                popupAnchor: [1, -34]
+                popupAnchor: [1, -34],
+                shadowSize: [41, 41]
             }),
             closed: L.icon({
                 iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-black.png',
+                shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
                 iconSize: [25, 41],
                 iconAnchor: [12, 41],
-                popupAnchor: [1, -34]
+                popupAnchor: [1, -34],
+                shadowSize: [41, 41]
             }),
             unavailable: L.icon({
                 iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+                shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
                 iconSize: [25, 41],
                 iconAnchor: [12, 41],
-                popupAnchor: [1, -34]
+                popupAnchor: [1, -34],
+                shadowSize: [41, 41]
             })
         };
 
@@ -106,14 +116,19 @@
             fetch(`/api/parking-spots/?vehicle_type=${vehicleType}`)
                 .then(response => response.json())
                 .then(spots => {
-                    map.eachLayer(layer => {
+                    console.log('Received spots:', spots);
+
+                    map.eachLayer((layer) => {
                         if (layer instanceof L.Marker) {
                             map.removeLayer(layer);
                         }
                     });
 
                     spots.forEach(spot => {
-                        L.marker([spot.lat, spot.lng], { icon: icons[spot.status] })
+                        console.log('Adding marker for:', spot);
+                        L.marker([spot.lat, spot.lng], {
+                            icon: icons[spot.status]
+                        })
                         .addTo(map)
                         .bindPopup(`
                             <b>${spot.name}</b><br>
@@ -124,10 +139,14 @@
                                 style="color: blue; text-decoration: none; font-weight: bold;">
                                 Click Here
                             </a><br>
-                            Status: <span style="color: ${spot.status === 'available' ? 'green' : spot.status === 'closed' ? 'black' : 'red'};">${spot.status}</span>
+                            Status: <span style="color: ${
+                                spot.status === 'available' ? 'green' : 
+                                spot.status === 'closed' ? 'black' : 'red'
+                            };">${spot.status}</span>
                         `);
                     });
 
+                    // Add blue marker after all spots are loaded
                     addBlueMarker();
                 })
                 .catch(error => {
@@ -135,12 +154,15 @@
                 });
         }
 
+        // Function to add a blue marker at a specific location
         function addBlueMarker() {
             const blueIcon = L.icon({
                 iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-orange.png',
+                shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
                 iconSize: [25, 41],
                 iconAnchor: [12, 41],
-                popupAnchor: [1, -34]
+                popupAnchor: [1, -34],
+                shadowSize: [41, 41]
             });
 
             L.marker([12.2656534, 75.1296366], { icon: blueIcon })
@@ -149,19 +171,8 @@
                 .openPopup();
         }
 
-        function addLegend() {
-            const legend = document.getElementById('legend');
-            legend.innerHTML = `
-                <p><strong>Legend</strong></p>
-                <i style="background: url(https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png) no-repeat center; background-size: contain;"></i> Available<br>
-                <i style="background: url(https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png) no-repeat center; background-size: contain;"></i> Unavailable<br>
-                <i style="background: url(https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-black.png) no-repeat center; background-size: contain;"></i> Closed<br>
-            `;
-        }
-
         loadParkingSpots();
         setInterval(loadParkingSpots, 5000);
-        addLegend();
 
         L.control.locate({
             position: 'bottomright',
@@ -169,6 +180,48 @@
                 title: "Show my location"
             }
         }).addTo(map);
+
+        
+        const legend = L.control({ position: "bottomright" });
+
+        legend.onAdd = function (map) {
+            let div = L.DomUtil.create("div", "legend");
+            div.innerHTML += "<h4 style='margin: 5px 0; font-size: 14px;'>Label</h4>";
+            div.innerHTML += `
+                <table style="border-collapse: collapse; width: auto; font-size: 12px;">
+                    <tr>
+                        <td style="padding: 3px;">
+                            <i style="background: url(https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png) no-repeat center center; 
+                            background-size: contain; width: 15px; height: 22px; display: inline-block;"></i>
+                        </td>
+                        <td style="padding: 3px; vertical-align: middle;">Available</td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 3px;">
+                            <i style="background: url(https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-black.png) no-repeat center center; 
+                            background-size: contain; width: 15px; height: 22px; display: inline-block;"></i>
+                        </td>
+                        <td style="padding: 3px; vertical-align: middle;">Closed</td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 3px;">
+                            <i style="background: url(https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png) no-repeat center center; 
+                            background-size: contain; width: 15px; height: 22px; display: inline-block;"></i>
+                        </td>
+                        <td style="padding: 3px; vertical-align: middle;">Unavailable</td>
+                    </tr>
+                </table>
+            `;
+            return div;
+        };
+
+        
+        legend.addTo(map);
+
+
+
+       
+
     </script>
 </body>
 </html>
